--- a/package.json
+++ b/package.json
@@ -19,6 +19,10 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "surge": "surge build --domain clumsy-year.surge.sh",
+    "deploy": "surge build --domain clumsy-year.surge.sh",
+    "predeploy": "npm run build",
+    "lt": "lt --port 3000 --subdomain mrobots"
   }
 }
