instruct bug: fix duplicate object by generating random prefixes for names

--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "react-scripts": "0.7.0"
   },
   "dependencies": {
+    "chance": "^1.0.4",
     "react": "^15.3.2",
     "react-addons-transition-group": "^15.3.2",
     "react-dom": "^15.3.2",
