--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
     "react-scripts": "0.7.0"
   },
   "dependencies": {
+    "alt": "^0.18.6",
+    "alt-container": "^1.0.2",
+    "alt-utils": "^1.0.0",
     "chance": "^1.0.4",
     "react": "^15.3.2",
     "react-addons-transition-group": "^15.3.2",
